<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, HvZ!</string>
    <string name="app_name">Humans and Zombies</string>

<string name="report_a_kill">Report a Kill</string>
<string name="username">Username</string>
<string name="login">Login</string>
<string name="password">Password</string>
<string name="tag_id">Tag ID</string>
<string name="submit">Submit</string>
<string name="internet_permission">android.permission.INTERNET</string>
<string-array name="days">
	<item>Yesterday</item>
	<item>Today</item>
</string-array>

<string name="settings">Settings</string>
<string name="save">Save</string>

<string name="cancel">Cancel</string>
<string name="my_account">My Account</string>
<string name="confirm_password">Confirm Password</string>
<string name="current_password">Current Password</string>
<string name="new_password">New Password</string>
<string name="change_password">Change Password</string>
<string name="site_url">http://uf.hvzsource.com</string>
<string name="logout">Logout</string>
<string name="register">Register</string>
<string name="email">Email</string>
<string name="first_name">First Name</string>
<string name="last_name">Last Name</string>
<string name="oz_opt">Put me in the original zombie pool</string>
<string name="version">1.3.0</string>
<string name="author">by Mike Seese</string>
<string name="players">Players</string>
</resources>
