<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#000000"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<EditText
		android:id="@+id/current_password"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center"
		android:maxLength="20"
		android:text="@string/current_password" />
	<EditText
		android:id="@+id/new_password"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center"
		android:maxLength="20"
		android:text="@string/new_password" />
	<EditText
		android:id="@+id/confirm_password"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center"
		android:maxLength="20"
		android:text="@string/confirm_password" />
	<Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/change_password"
	    android:onClick="changePassword" />
	<Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/cancel"
	    android:onClick="cancel" />
	<TextView
		android:id="@+id/my_tag_id"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content" />
</LinearLayout>