<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#000000"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<EditText
		android:id="@+id/username"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center"
		android:text="@string/username" />
	<EditText
		android:id="@+id/password"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center"
		android:text="@string/password" />
	<Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/login"
	    android:onClick="login" />
	<Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/cancel"
	    android:onClick="cancel" />
</LinearLayout>